# InstantApply

./: .env.example  .flaskenv  .gitignore  InstantApplyService.py  README.md  __init__.py  app.py  config.py  find_nearai.py  fix_openssl_deps.py  gemini_models.py  init_db.py  install_dependencies.sh  install_nearai copy.sh  install_nearai.sh  installation_instructions.py  instant_apply.db  metadata.json  nearai_upload.sh  pyproject.toml  requirements.txt  reset_db.py  run_integration_test.py  search_results.json  setup.py  setup_dependencies.sh  setup_playwright.py  simple_fix.py
application_filler/: # Code Citations.md  auto_filler.py  base_filler.py  runner.py  runner_service.py
archive/: gemini_caller.py  integrated.py  test_integration_real.py
archives/: init_db.py  reset_db.py  setup_gemini.py
debug/: api_response.json  raw_api_response.json  search_results.json
forms/: __init__.py  profile.py
migrations/: README.md  alembic.ini  convert_list_to_json.py  create_waitlist_table.py
models/: __init__.py  application.py  job_recommendation.py  user.py  waitlist.py
routes/: __init__.py  api.py  auth.py  checkout.py  debug.py  profile.py
services/: InstantApplyService.ts  UserService.ts
templates/: applications.html  apply_url.html  auto_apply.html  base.html  checkout.html  dashboard.html  index.html  login.html  profile.html  recommendations.html  signup.html  upload_resume.html
tests/: test_app.py  test_benchmark.py  test_cv_parser.py  test_integration.py  test_integration_real.py  test_job_search.py  test_playwright.py  test_scraper.py  yai.py  (+1 more)
(+81 files in other folders)
