[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instantapply"
version = "0.1.0"  # PEP 440 compliant version
description = "Automated job application tool using AI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jane", email = "jane@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "google-generativeai",
    "playwright",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/username/instantapply"
"Bug Tracker" = "https://github.com/username/instantapply/issues"

[tool.setuptools]
# Define the packages explicitly
packages = [
    "utils",
    "utils.job_search",
    "models",
    "tests"
]

# Near AI registry specific configuration
[tool.nearai]
name = "instantapply"
version = "0.1.0"
description = "AI-powered automated job application tool"
